Fixed a bug causing vertical scrollbar to appear when visibility:off

--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -74,7 +74,8 @@ Material icons
 
 // Some icons are bugged and this will fix it
 nav i.material-icons.bugged{
-	margin-right: -3.7rem !important;
+	max-width: 25px;
+  overflow: hidden;
 }
 
 // Override the font size and icon space for navigation
